[package]
name = "dbscan"
version = "0.2.0"
authors = ["Michael Lazear <noreply@lazear.io>"]
license = "MIT"
description = "Dependency free implementation of DBSCAN clustering "
repository = "https://github.com/lazear/dbscan.git"
homepage = "https://github.com/lazear/dbscan"

[dependencies]
rstar = "0.9.3"
num-traits = "0.2.0"
